<resources>
    <string name="app_name">ML Motion Detector</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Recording movements</string>
    <string name="start_recording_btn">Start recording</string>
    <string name="stop_recording_btn">Stop recording</string>
    <string name="refresh_connected_nodes">Search for connected devices</string>
    <string name="connection_status">Connection status: %1$s</string>
    <string name="phone_node_id">PhoneNode ID: %1$s</string>
    <string name="available_sensors">Available sensors: %1$s</string>

    <string name="acc_x">acc-x: %1$s</string>
    <string name="acc_y">acc-y: %1$s</string>
    <string name="acc_z">acc-z: %1$s</string>

    <string name="gyro_x">gyro-x: %1$s</string>
    <string name="gyro_y">gyro-y: %1$s</string>
    <string name="gyro_z">gyro-z: %1$s</string>

    <string name="predictionName">%1$s</string>
    <string name="initial_time">00:00:00:000</string>

    <string name="predictionText"></string>

    <string name="open_downloads">Open Downloads/</string>
</resources>