<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/yellow"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="364dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/connection_status"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_node_id"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/start_recording_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:text="@string/start_recording_btn"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh_connected_nodes"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/stop_recording_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/stop_recording_btn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh_connected_nodes"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/refresh_connected_nodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:text="@string/refresh_connected_nodes"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_status"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phone_node_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:text="@string/phone_node_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="265dp"
        android:layout_height="165dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/predictionName"
        android:scaleType="fitCenter"
        android:src="@drawable/goliath"
        app:layout_constraintEnd_toEndOf="@+id/refresh_connected_nodes"
        app:layout_constraintTop_toBottomOf="@+id/refresh_connected_nodes" />

    <Button
        android:id="@+id/open_downloads_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/open_downloads"
        app:layout_constraintEnd_toEndOf="@+id/start_recording_btn"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="@+id/start_recording_btn"
        app:layout_constraintTop_toBottomOf="@+id/start_recording_btn" />

    <TextView
        android:id="@+id/predicted_text"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:textColor="@color/black"
        android:text="@string/predictionText"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/recording_time"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/initial_time"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_medium_1"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/connection_status"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/connection_status"
        app:layout_constraintTop_toBottomOf="@+id/connection_status" />

</androidx.constraintlayout.widget.ConstraintLayout>